--- a/WinAppPairollBoards/WinAppPairollBoards.csproj
+++ b/WinAppPairollBoards/WinAppPairollBoards.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Authorization.Designer.cs">
       <DependentUpon>Authorization.cs</DependentUpon>
     </Compile>
+    <Compile Include="EditCoefficients.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditCoefficients.Designer.cs">
+      <DependentUpon>EditCoefficients.cs</DependentUpon>
+    </Compile>
     <Compile Include="Manager.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -74,6 +80,9 @@
     <Compile Include="Classes\«ClassIniDataBase.cs" />
     <EmbeddedResource Include="Authorization.resx">
       <DependentUpon>Authorization.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditCoefficients.resx">
+      <DependentUpon>EditCoefficients.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Executor.resx">
       <DependentUpon>Executor.cs</DependentUpon>
